# ctmint

./: Cargo.toml  LICENSE  Makefile  README.md  ctmint.yaml  kmy-drug-store.yaml
crates/ctmint-cli/: Cargo.toml
crates/ctmint-cli/src/: main.rs
crates/ctmint-cli/src/commands/: download_model.rs  graph.rs  index.rs  init.rs  mod.rs  serve.rs
crates/ctmint-config/: Cargo.toml
crates/ctmint-config/src/: global.rs  lib.rs  manifest.rs
crates/ctmint-core/: Cargo.toml
crates/ctmint-core/src/: error.rs  graph.rs  id.rs  lib.rs  vector.rs
crates/ctmint-mcp/: Cargo.toml
crates/ctmint-mcp/src/: protocol.rs  server.rs  tools.rs
crates/ctmint-onboard/: Cargo.toml
crates/ctmint-onboard/src/: detection.rs  flow.rs  inference.rs  lib.rs  model_manager.rs  prompts.rs  questions.rs  scanner.rs  writer.rs
crates/ctmint-onboard/tests/: integration.rs
crates/ctmint-onboard/tests/fixtures/multi-service/: .env.example
crates/ctmint-onboard/tests/fixtures/multi-service/services/auth/: requirements.txt
crates/ctmint-onboard/tests/fixtures/multi-service/services/payment/: Cargo.toml
crates/ctmint-onboard/tests/fixtures/single-python/: .env.example  requirements.txt
crates/ctmint-storage/: Cargo.toml
crates/ctmint-storage/src/: graph.rs  lib.rs  sqlite_graph.rs  vector.rs
ideas/: Codebase MCP Ideas (ContextMint) 52feee02a28346a29b725d4568ab09f5.md  Overview.md  ai-setup-agent.md  code-indexer.md  code-parser.md  context-funnel.md  data-ingestion.md  deployment-and-languages.md  knowledge-graph.md  mcp-core.md  orchestrator.md  planning.md  plugins-and-capabilities.md  runtime-ingestion.md  vector-index.md
planning/: README.md  cycle-00-skeleton-and-contracts.md  cycle-01-onboarding.md  cycle-02-knowledge-graph.md  cycle-03-code-parser-and-indexer.md  cycle-04-vector-index.md  cycle-05-context-funnel.md  cycle-06-data-ingestion.md  cycle-07-runtime-ingestion.md  cycle-08-plugins-and-capabilities.md  cycle-09-diagnose-mvp.md  cycle-10-hardening.md  full-application-flow.md
