[workspace]
resolver = "2"
members = [
    "crates/ctmint-core",
    "crates/ctmint-config",
    "crates/ctmint-storage",
    "crates/ctmint-mcp",
    "crates/ctmint-onboard",
    "crates/ctmint-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Richard Tran <richardktran.dev@gmail.com>"]
repository = "https://github.com/richardktran/ctmint"

[workspace.dependencies]
ctmint-core = { path = "crates/ctmint-core" }
ctmint-config = { path = "crates/ctmint-config" }
ctmint-storage = { path = "crates/ctmint-storage" }
ctmint-mcp = { path = "crates/ctmint-mcp" }
ctmint-onboard = { path = "crates/ctmint-onboard" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
