[package]
name = "ctmint-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
ctmint-config = { workspace = true }
ctmint-core = { workspace = true }
ctmint-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
