[package]
name = "ctmint-storage"
version.workspace = true
edition.workspace = true

[dependencies]
ctmint-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
